Spring Security configured, CustomGlobalExceptionHandler implemented